--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "boom": "^7.1.1",
+    "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^5.0.0",
     "express": "^4.15.2",
+    "express-flash": "^0.0.2",
+    "express-validator": "^5.0.1",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
+    "joi": "^13.1.2",
     "klaw-sync": "^3.0.2",
+    "lusca": "^1.5.2",
+    "monk": "^6.0.5",
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.6.0",
+    "passport": "^0.4.0",
     "preact": "^7.2.0",
-    "preact-render-to-string": "^3.6.0"
+    "preact-render-to-string": "^3.6.0",
+    "stripe": "^5.5.0"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.23.0",
-    "razzle": "^0.8.11"
+    "razzle": "^2.0.0-alpha.12"
   }
 }
